--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 .env
+client_secret.json
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
