--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Authlib==0.15.5
+Babel==2.9.1
 bcrypt==3.2.0
+blinker==1.4
 cachelib==0.4.1
 cachetools==4.2.4
 certifi==2021.10.8
@@ -10,25 +12,47 @@ colorama==0.4.4
 cryptography==36.0.0
 dnspython==2.1.0
 Flask==2.0.2
+Flask-BabelEx==0.9.4
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-OAuth==0.12
+Flask-Principal==0.4.0
 Flask-PyMongo==2.3.0
+Flask-Security==3.0.0
 Flask-Session==0.4.0
+Flask-Social==1.6.2
+Flask-WTF==1.0.0
+google-api-core==2.3.0
+google-api-python-client==2.33.0
 google-auth==2.3.3
+google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.6
+googleapis-common-protos==1.54.0
+httplib2==0.20.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 oauth==1.0.1
+oauth2==1.9.0.post1
+oauth2client==4.1.3
 oauthlib==3.1.1
+passlib==1.7.4
 pathlib==1.0.1
+protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pymongo==4.0.1
+pyparsing==3.0.6
 python-dotenv==0.19.2
+pytz==2021.3
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.8
 six==1.16.0
+speaklater==1.3
+uritemplate==4.1.1
 urllib3==1.26.7
 Werkzeug==2.0.2
+WTForms==3.0.0
